@@ -16,7 +16,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmake(1)</h1>
-<h2 id="author">A program maintenance utility<br/>(icmake.9.02.06.tar.gz)</h2>
+<h2 id="author">A program maintenance utility<br/>(icmake.9.02.07.tar.gz)</h2>
 <h2 id="date">1992-2018</h2>
 
 
@@ -1408,6 +1408,8 @@ for <strong >C++</strong> and <strong >C</strong> program maintenance.
 <h2 >BUGS</h2>
     Standard comment starting  on lines containing preprocessor directives
         may not extend over multiple lines.
+<p>
+Path names containing blanks are not supported.
 <p>
 <h2 >COPYRIGHT</h2>
     This is free software, distributed under the terms of the 
