@@ -16,7 +16,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmbuild(1)</h1>
-<h2 id="author">Icmake's generic program maintenance facility<br/>(icmake.9.02.06.tar.gz)</h2>
+<h2 id="author">Icmake's generic program maintenance facility<br/>(icmake.9.02.07.tar.gz)</h2>
 <h2 id="date">1992-2018</h2>
 
 
@@ -279,7 +279,7 @@ Here is an example of the configuration file <em >icmconf</em> for a concrete
     #define USE_ALL             "a"
     #define USE_ECHO              ON
     #define CXX                 "g++"
-    #define CXXFLAGS            " --std=c++14 -Wall -O2 -pthread" " -fdiagnostics-color=never "
+    #define CXXFLAGS            " --std=c++17 -Wall -O2 -pthread" " -fdiagnostics-color=never "
     #define IH                  ".ih"
     #define PRECOMP             "-x c++-header"
     #define REFRESH
