@@ -16,7 +16,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmstart(1)</h1>
-<h2 id="author">starts icmbuild program maintenance<br/>(icmake.9.02.06.tar.gz)</h2>
+<h2 id="author">starts icmbuild program maintenance<br/>(icmake.9.02.07.tar.gz)</h2>
 <h2 id="date">1992-2018</h2>
 
 
@@ -213,7 +213,7 @@ merely installs the top-level directory, <em >icmconf</em> and <em >VERSION</em>
     <strong >icmake</strong>(1), <strong >icmbuild</strong>(1), <strong >icmconf</strong>(7), <strong >icmstart.rc</strong>(7).
 <p>
 <h2 >BUGS</h2>
-    None reported
+    Path names containing blanks are not supported.
 <p>
 <h2 >COPYRIGHT</h2>
     This is free software, distributed under the terms of the 
