@@ -16,7 +16,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmstart.rc(7)</h1>
-<h2 id="author">icmstart resource file<br/>(icmake.9.02.06.tar.gz)</h2>
+<h2 id="author">icmstart resource file<br/>(icmake.9.02.07.tar.gz)</h2>
 <h2 id="date">1992-2018</h2>
 
 
